--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -11,12 +11,15 @@
   --color-primary-dark: 141, 70, 194;
   --color-secondary: 31, 31, 31;
   --color-secondary-light: 67, 64, 61;
+  --color-shine: 249, 245, 132;
 
   --font-heading: Switzer, Poppins sans-serif;
   --typescale-h1: 5.625rem;
   --typescale-h2: 4.1875rem;
   --typescale-h3: 3.1875rem;
   --typescale-lead: 1.3125rem;
+
+  --border-radius: 5px;
 
   --padding-desktop-horizontal: 10rem;
   --padding-phone-horizontal: 1.25rem;
