--- a/styles/style.scss
+++ b/styles/style.scss
@@ -23,6 +23,7 @@ a {
 // Imports
 @import "base/reset";
 @import "base/typescale";
+@import "base/effects";
 @import "components/button";
 @import "components/actor-card";
 @import "layout/navbar";
