finition de la section des acteurs sur la page de présentation générale

--- a/styles/layout/_navbar.scss
+++ b/styles/layout/_navbar.scss
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: space-between;
 
-  background: rgba(var(--color-background), .2);;
+  background: rgba(var(--color-background), 0);;
   border-bottom: 1px solid transparent;
 
   transition: background-color .3s;
