--- a/styles/pages/_general-presentation-page.scss
+++ b/styles/pages/_general-presentation-page.scss
@@ -1,9 +1,20 @@
 
 
 .actors-grid {
+  margin-top: 4rem;
   padding: 0 20%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 1rem;
+  grid-gap: 2rem;
+
+  & > div {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+  }
+
+  & > div:first-child {
+    margin-top: 10rem;
+  }
 }
 
