--- a/styles/style.scss
+++ b/styles/style.scss
@@ -24,6 +24,7 @@ a {
 @import "base/reset";
 @import "base/typescale";
 @import "base/effects";
+@import "base/animations";
 @import "components/button";
 @import "components/actor-card";
 @import "layout/navbar";
