maj des backkstages + les scss

--- a/styles/pages/_style_backstage.scss
+++ b/styles/pages/_style_backstage.scss
@@ -24,4 +24,13 @@
             color: #F67A60;
         }
     }
+
+    .articleClair{
+        background-color: #CE91FA;
+        color: #1F1F1F;
+    }
+    .articleSombre{
+        background-color: #8D46C2;
+        color: #1F1F1F;
+    }
 }
