--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,7 @@
 // Load fonts and variables
 @import "abstracts/variables";
-@import "./fonts/switzer.css";
-@import "./fonts/archivo.css";
+@import "./fonts/switzer";
+@import "./fonts/archivo";
 
 // Main styles
 body {
@@ -21,7 +21,10 @@ a {
 }
 
 // Imports
-@import "base/reset.css";
+@import "base/reset";
+@import "base/animations";
+@import "base/effects";
+@import "base/typescale";
 @import "components/button";
 @import "components/actor-card";
 @import "layout/navbar";
@@ -32,5 +35,5 @@ a {
 
 // Pages imports
 @import "pages/general-presentation-page";
-@import "pages/presentation_toutes_les_saisons.css";
-@import "pages/style_backstage.scss";
+@import "pages/presentation_toutes_les_saisons";
+@import "pages/style_backstage";
