--- a/styles/pages/_presentation_toutes_les_saisons.scss
+++ b/styles/pages/_presentation_toutes_les_saisons.scss
@@ -19,8 +19,6 @@
             margin: 2.5rem 0;
 
             display: flex;
-            justify-content: center;
-            align-items: center;
             gap: 2rem;
 
             border-radius: var(--border-radius);
@@ -31,12 +29,17 @@
                 flex-direction: column;
 
                 gap: 1rem;
+
+                a:hover {
+                    cursor: pointer;
+                }
             }
 
             // Partie de gauche
             &>div:first-child {
 
                 align-items: center;
+                justify-content: space-between;
 
                 // N° saison
                 &>p:first-child {
@@ -60,34 +63,50 @@
                 &>a {
                     color: white;
                     padding: 0 2rem;
+
+                    transition: 0.5s;
     
                     background-color: rgb(var(--color-accent-dark));
                     border-radius: var(--border-radius);
+
+                    &:hover {
+                        background-color: rgb(var(--color-primary-dark));
+                    }
                 }
             }
 
             // Partie de droite (résumé)
             &>div:last-child {
                 
-                hr {
-                    border: 1px solid black;
-                    margin: 0 100px;
+                .text-zone{
+
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    flex-grow: 1;
+                    gap: 0.5rem;
+
+                    hr {
+                        border: 1px solid black;
+                        width: 80%;
+                    }
                 }
 
+                // Mentions en bas
                 &>div{
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
+                    flex-grow: 0;
                 }
 
-                // mentions utiles, à gauche
+                // mentions en bas, à gauche
                 &>div>div {
                     display: flex;
                     align-items: center;
                     gap: 1rem;
                 }
-
-            }          
+            }      
         }
     }
 }
