--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -1,17 +1,25 @@
 
 
 .button {
+  display: inline-block;
   border: 0;
   outline: none;
   padding: 1rem 3rem;
 
-  background: paint(squircle);
-  --squircle-smooth: 1;
-  --squircle-radius: 10px;
-  --squircle-fill: rgb(var(--color-primary));
-
+  border-radius: var(--border-radius);
   cursor: pointer;
 
   font-size: inherit;
   font-family: inherit;
+
+  transition: color .3s ease, background .3s ease;
+
+  &.primary {
+    background: rgb(var(--color-primary-light));
+    color: rgb(var(--color-background));
+
+    &:hover {
+      background: rgb(var(--color-primary-dark));
+    }
+  }
 }
