Animation et fonctions finies sur les cadres des saisons

--- a/styles/base/_effects.scss
+++ b/styles/base/_effects.scss
@@ -2,7 +2,7 @@
     box-shadow: 0 0 10px 0 rgb(var(--color-shine));    
 }
 
-.saison-bouton {
+.trigger {
     display: flex;
     align-items: center;
     justify-content: center;
