--- a/styles/pages/_presentation_toutes_les_saisons.scss
+++ b/styles/pages/_presentation_toutes_les_saisons.scss
@@ -2,6 +2,11 @@
 
     &>main {
         padding: 0 var(--padding-desktop-horizontal);
+
+        h1 {
+            font-size: var(--typescale-h3);
+            font-weight: 700;
+        }
     
         // Teintes de violet (bg) alternées entre chaque saison
         &>article:nth-child(even){
@@ -37,6 +42,10 @@
 
             // Partie de gauche
             &>div:first-child {
+
+                flex-basis: 15%;
+                flex-shrink: 0;
+                flex-grow: 0;
 
                 align-items: center;
                 justify-content: space-between;
@@ -77,6 +86,8 @@
 
             // Partie de droite (résumé)
             &>div:last-child {
+
+                flex-grow: 1;
                 
                 .text-zone{
 
@@ -89,6 +100,17 @@
                     hr {
                         border: 1px solid black;
                         width: 80%;
+                    }
+
+                    // texte
+                    p {
+                        display: none;
+
+                        transition: 1s;
+                    }
+
+                    p.active {
+                        display: block;
                     }
                 }
 
@@ -105,6 +127,15 @@
                     display: flex;
                     align-items: center;
                     gap: 1rem;
+
+                    button {
+                        transition: 0.2s;
+                    }
+                    
+                    button:hover{
+                        cursor: pointer;
+                        transform: rotate(8deg);
+                    }
                 }
             }      
         }
