--- a/styles/pages/_presentation_toutes_les_saisons.scss
+++ b/styles/pages/_presentation_toutes_les_saisons.scss
@@ -132,9 +132,13 @@
                         transition: 0.2s;
                     }
                     
-                    button:hover{
+                    button:hover {
                         cursor: pointer;
                         transform: rotate(8deg);
+                    }
+
+                    button.active {
+                        background-color: rgb(var(--color-accent-dark));
                     }
                 }
             }      
