finition de la page, amélioration du footer, et début du responsive de la navbar

--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -1,5 +1,13 @@
 body > footer {
-    
+
+    // variables d'animation
+    @keyframes squish {
+        from, to { transform: scale(1, 1); }
+        25% { transform: scale(0.9, 1.1); }
+        50% { transform: scale(1.1, 0.9); }
+        75% { transform: scale(0.95, 1.05); }
+    }
+
     border-top: 1px solid rgb(var(--color-secondary-light));
 
     margin-top: 4rem;
@@ -48,6 +56,10 @@ body > footer {
                 height: 2.5rem;
                 border-radius: 5rem;
                 background-color: rgb(var(--color-secondary-light));
+
+                &:hover {
+                    animation: squish ease 0.3s;
+                }
             }
         }
     }
