--- a/styles/layout/_navbar.scss
+++ b/styles/layout/_navbar.scss
@@ -1,5 +1,6 @@
-
 .navbar {
+
+  // FORMAT DESKTOP
   width: 100vw;
   padding: 1rem var(--padding-desktop-horizontal);
   position: fixed;
@@ -25,6 +26,10 @@
       font-family: rgb(var(--font-heading));
       font-weight:  700;
     }
+  }
+
+  .hamburger-menu {
+    display: none;
   }
 
   ul {
@@ -65,5 +70,18 @@
         }
       }
     }
+  }
+
+  // FORMAT RESPONSIVE
+  @media screen and (max-width: 728px) {
+    .hamburger-menu {
+      cursor: pointer;
+      display: block;
+    }
+
+    ul {
+      display: none;
+    }
+    
   }
 }
