--- a/styles/style.scss
+++ b/styles/style.scss
@@ -20,6 +20,13 @@ a {
   color: inherit;
 }
 
+button {
+  background: transparent;
+  border: none;
+  color: inherit;
+  font-size: inherit;
+}
+
 // Imports
 @import "base/reset";
 @import "base/animations";
@@ -27,6 +34,7 @@ a {
 @import "base/typescale";
 @import "components/button";
 @import "components/actor-card";
+@import "components/critique-slider";
 @import "layout/navbar";
 @import "layout/header";
 @import "layout/sections";
