responsive du footer & navbar

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -29,6 +29,7 @@
   // FORMAT RESPONSIVE
   @media screen and (max-width: 728px) {
     --padding-desktop-horizontal: 1.25rem;
+    --typescale-h3: 1.75rem;
   }
 }
 
