--- a/styles/layout/_navbar.scss
+++ b/styles/layout/_navbar.scss
@@ -74,6 +74,8 @@
 
   // FORMAT RESPONSIVE
   @media screen and (max-width: 728px) {
+    
+    // croix
     .hamburger-menu {
       cursor: pointer;
       display: flex;
@@ -81,47 +83,43 @@
 
       // menu hamburger cliqué
       &.active {
-
         svg {
           transition: 1s;
         }
-
         svg:first-child {
           transform: rotate(45deg) translateX(3px) translateY(11px)
         }
-
         svg:last-child  {
           transform: rotate(-45deg)
         }
-
       }
     }
 
+    // liste en deça de la croix
     ul {
       position: absolute;
       bottom: 0;
-      overflow: hidden;
+      width: 100vw;
+      left: 0;
+
+      visibility: hidden;
+      background-color: black;
+
+      z-index: -1;
+      transition: 1s;
 
       display: flex;
       flex-direction: column;
-
-      width: 100vw;
-
-      justify-content: flex-end;
-      left: 0;
-
-      a {
-        width: 100vw;
-      }
+      align-items: flex-end;
 
       a::after {
         content: none;
       }
 
       &.active {
+        visibility: visible;
         transform: translateY(100%);
       }
     }
-    
   }
 }
