--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -63,4 +63,16 @@ body > footer {
             }
         }
     }
+
+    @media screen and (max-width: 728px) {
+
+        &>div>div:first-child {
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 3rem;
+            padding-left: 3rem;
+            margin-bottom: 2rem;
+        }
+
+    }
 }
