--- a/styles/pages/_style_backstage.scss
+++ b/styles/pages/_style_backstage.scss
@@ -1,5 +1,7 @@
 #body_backstage{
     header{
+        height: 100vh;
+
         & > div{
             display: flex;
             direction: row;
@@ -25,7 +27,7 @@
 
     main{
 
-        padding: 0 6rem;
+        padding: 0 11rem;
 
         & > div{
             display: flex;
@@ -39,13 +41,14 @@
 
         & > hr{
             color: #F67A60;
-            margin: 0px 9rem;
+            margin: 0 9rem;
         }
 
         article{
             margin: 3rem 1.5rem;
             padding: 1rem;
-            border-radius: 10px;
+            border-radius: 0.6rem;
+            width: 100%;
             
             p{
                 margin-left: 1.5rem;
@@ -60,6 +63,12 @@
             font-size: 1.4rem;
             line-height: 1.5rem;
             margin-bottom: 0.4rem;
+        }
+
+        img{
+            width: 30vh;
+            height: 10vw;
+            margin: 0.5rem;
         }
     }
 
@@ -83,13 +92,18 @@
             width: 25rem;
             height: 2.5rem;
         }
+
+        img{
+            float: left;
+        }
     }
     .articleSombre{
         background-color: #8D46C2;
         color: #1F1F1F;
+        width: 100%;
         & > hr{
             color: #CE91FA;
-            margin: 0 100px 10px 0;
+            margin: 0 6rem 0.6rem 0;
         }
 
         summary{
@@ -98,6 +112,10 @@
             border-radius: 10px;
             width: 25rem;
             height: 2.5rem;
+        }
+
+        img{
+            float: right;
         }
     }
 }
