--- a/styles/pages/_general-presentation-page.scss
+++ b/styles/pages/_general-presentation-page.scss
@@ -41,6 +41,26 @@
   display: grid;
   grid-template-columns: repeat(4, 100%);
 
+  &::after,
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 10vw;
+    height: 100%;
+    z-index: 2;
+  }
+
+  &::before {
+    left: 0;
+    background: linear-gradient(90deg, rgb(var(--color-background)) 0%, transparent 100%);
+  }
+
+  &::after {
+    right: 0;
+    background: linear-gradient(90deg, transparent 0%, rgb(var(--color-background)) 100%);
+  }
+
   & > div {
     width: 100%;
     height: 100vh;
@@ -73,7 +93,7 @@
       bottom: 0;
       display: block;
 
-      background: rgb(var(--color-secondary));
+      background: linear-gradient(0deg, rgb(var(--color-primary)) 0%, rgb(var(--color-background)) 100%);
     }
 
     &:nth-child(1) span {
