--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,6 +4,19 @@
 @import "./fonts/archivo";
 
 // Main styles
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(var(--color-secondary), 1);
+  border-radius: 10px;
+}
+
 body {
   width: 100vw;
   background: rgb(var(--color-background));
