debut du responsive pour les cadres

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -30,6 +30,7 @@
   @media screen and (max-width: 728px) {
     --padding-desktop-horizontal: 1.25rem;
     --typescale-h3: 1.75rem;
+    --typescale-lead: 1.000rem;
   }
 }
 
