--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -20,6 +20,7 @@
   --typescale-h2: 4.1875rem;
   --typescale-h3: 3.1875rem;
   --typescale-lead: 1.3125rem;
+  --typescale-small-text: 0.75rem;
 
   --border-radius: 5px;
 
