--- a/styles/layout/_navbar.scss
+++ b/styles/layout/_navbar.scss
@@ -80,12 +80,12 @@
       cursor: pointer;
       display: flex;
       flex-direction: column;
+      svg {
+        transition: .5s;
+      }
 
       // menu hamburger cliqué
       &.active {
-        svg {
-          transition: 1s;
-        }
         svg:first-child {
           transform: rotate(45deg) translateX(3px) translateY(11px)
         }
@@ -97,27 +97,41 @@
 
     // liste en deça de la croix
     ul {
+      z-index: 1000;
       position: absolute;
       bottom: 0;
       width: 100vw;
       left: 0;
 
-      visibility: hidden;
-      background-color: black;
+      background-color: rgba(var(--color-background), .8);
 
-      z-index: -1;
-      transition: 1s;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity .6s ease, transform .6s ease;
 
       display: flex;
       flex-direction: column;
       align-items: flex-end;
+
+      li:first-child {
+        border-top: rgb(var(--color-secondary-light)) 1px solid;
+      }
+
+      li {
+        width: 100%;
+        padding: 0.5rem 0;
+        text-align: end;
+
+        border-bottom: rgb(var(--color-secondary-light)) 1px solid;
+      }
 
       a::after {
         content: none;
       }
 
       &.active {
-        visibility: visible;
+        pointer-events: auto;
+        opacity: 1;
         transform: translateY(100%);
       }
     }
