--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -5,6 +5,7 @@ body > header {
   min-height: 100svh;
   position: relative;
   overflow: hidden;
+  padding: 0 var(--padding-desktop-horizontal);
 
   display: flex;
   align-items: center;
@@ -17,6 +18,7 @@ body > header {
     font-weight: 900;
     line-height: 80%;
     letter-spacing: -1px;
+    margin-bottom: 1rem;
   }
 
   .header-info {
@@ -24,9 +26,10 @@ body > header {
     display: flex;
     align-items: center;
 
-    font-size: 1.75rem;
+    font-size: 3vw;
 
     p {
+      line-height: 100%;
       font-style: italic;
     }
 
@@ -61,6 +64,8 @@ body > header {
     transform: translate(-50%, -50%);
     background: rgb(var(--color-primary));
     filter: blur(500px);
+    -ms-filter: blur(500px);
+    -webkit-filter: blur(500px);
   }
 
   // background image
@@ -87,5 +92,49 @@ body > header {
     display: block;
 
     background: linear-gradient(0deg, rgb(var(--color-background)) 0%, rgba(255, 255, 255, 0.00) 100%);
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  body > header {
+    justify-content: flex-start;
+
+    h1 {
+      margin-bottom: .5rem;
+    }
+
+    .header-info {
+      p {
+        font-size: 1rem;
+
+      }
+      img {
+        width: 20px;
+        height: 20px;
+        display: inline-block;
+      }
+    }
+  }
+}
+
+
+@media only screen and (max-width: 426px) {
+  body > header {
+
+    h1 {
+      font-size: var(--typescale-h3);
+    }
+
+    .header-info {
+      font-size: 1rem;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: .2rem;
+
+      .sep {
+        display: none;
+      }
+
+    }
   }
 }
