--- a/styles/pages/_general-presentation-page.scss
+++ b/styles/pages/_general-presentation-page.scss
@@ -1,7 +1,6 @@
 
 
 #actors {
-
   & > div:last-child {
     padding: 10rem;
     display: flex;
@@ -9,6 +8,8 @@
     justify-content: center;
     flex-direction: column;
     gap: 1rem;
+
+    text-align: center;
 
     p {
       font-size: var(--typescale-lead);
@@ -108,5 +109,79 @@
     &:nth-child(4) span {
       height: 5vh;
     }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .price-wrapper {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+
+    &::before,
+    &::after {
+      content: none;
+    }
+
+    & > div {
+      height: auto;
+
+      & div h3 {
+        font-size: var(--typescale-h3);
+      }
+
+      img {
+        height: 20vw;
+      }
+
+      span {
+        display: none;
+      }
+    }
+  }
+
+  #actors {
+    & > div:last-child {
+      padding: 10rem 0;
+    }
+  }
+  .actors-grid {
+    grid-template-columns: 1fr;
+    grid-row-gap: 4rem;
+
+    & > div {
+      display: flex;
+      flex-direction: column;
+      gap: 4rem;
+    }
+
+    & > div:first-child {
+      margin-top: 0;
+    }
+  }
+}
+
+@media only screen and (max-width: 426px) {
+
+  .price-wrapper {
+    justify-content: flex-start;
+    & > div {
+      align-items: flex-start;
+
+      & > div {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2, 50%);
+
+        img {
+          place-self: center;
+        }
+      }
+    }
+  }
+
+  .actors-grid {
+    padding: 0;
   }
 }
