Ajout de la bare de navigation sur la page de présentation générale

--- a/styles/components/_critique-slider.scss
+++ b/styles/components/_critique-slider.scss
@@ -4,7 +4,7 @@
   background: rgba(var(--color-secondary-light), .4);
   border-radius: var(--border-radius);
 
-  .slide-wapper {
+  .slide-wrapper {
 
   }
 
