--- a/styles/pages/_presentation_toutes_les_saisons.scss
+++ b/styles/pages/_presentation_toutes_les_saisons.scss
@@ -20,7 +20,7 @@
 
         // lignes de séparation
         &>article+svg {
-            width: 70vw;
+            width: 70%;
         }
 
         // Style global des cadres de présentation des saisons
@@ -37,6 +37,7 @@
             gap: 2rem;
 
             border-radius: var(--border-radius);
+            transition: .5s;
 
             // pour le responsive plus tard
             &>span {
@@ -127,6 +128,15 @@
                     p.active {
                         display: block;
                     }
+
+                    // likes pour le responsive
+                    div:last-child {
+                        display: none;
+                        gap: 0rem;
+                        p {
+                            display: block;
+                        }
+                    }
                 }
 
                 // Mentions en bas
@@ -166,6 +176,11 @@
     @media screen and (max-width: 728px) {
         
         main {
+
+            // lignes de séparation
+            &>article+svg {
+                width: 75%;
+            }
             
             // CADRES DE PRESENTATION DES SAISONS
             &>article {
@@ -175,6 +190,16 @@
 
                 padding: .5rem;
                 margin: 1rem 0;
+
+                &.on-display {
+                    justify-content: flex-start;
+                    width: 75%;
+                }
+
+                // éléments cachés pour le responsive
+                .hidden {
+                    display: none !important;
+                }
 
                 // afficher les lignes verticales et les étoiles à droite
                 &>span {
@@ -186,12 +211,6 @@
                     width: 1px;
                     background-color: black;
                 }
-                &>span::before {
-                    content:"";
-                    width: 6px;
-                    height: 6px;
-                    background-color: red;
-                }
 
                 // Deux parties principales de description dans le cadre (poster + boutons)
                 &>div {
@@ -202,7 +221,9 @@
                 &>div:first-child {
                     // N° saison
                     &>p:first-child {
-                        padding: 0 .5rem;
+                        padding-right: 0.5rem;
+                        padding-left: 0.5rem;
+
                         border-radius: var(--border-radius);
                         background-color: white;
                         
@@ -224,7 +245,8 @@
         
                     // bouton REGARDER
                     &>a {
-                        padding: 0 .5rem;
+                        padding-right: 0.5rem;
+                        padding-left: 0.5rem;
                         transition: 0.8s;
         
                         background-color: rgb(var(--color-accent-dark));
@@ -241,9 +263,49 @@
                 &>div:nth-child(3) {
                     align-self: center;
                     flex-grow: 0;
+
+                    // si le texte doit être affiché à droite (car bouton cliqué)
+                    &.on-display {
+                        flex-direction: row;
+                        justify-content: start;
+                        width: 100%;
+
+                        .text-zone {
+                            display: flex !important;
+                            justify-content: space-between;
+                            order: 2;
+
+                            hr {
+                                display: none;
+                            }
+
+                            div:last-child.show {
+                                display: flex !important;
+                            }
+                        }
+
+                        // ligne de séparation boutons|texte
+                        span {
+                            flex-grow: 0;
+                            flex-shrink: 0;
+
+                            display: block;
+                            height: 100px;
+                            width: 1px;
+                            background-color: black;
+                        }
+
+                        // zone des boutons
+                        div:last-child {
+                            gap: 0.5rem;
+
+                            &>div {
+                                gap: 0.6rem;
+                            }
+                        }
+                    }
                     
                     .text-zone{
-
                         display: none;
 
                         hr {
@@ -253,9 +315,9 @@
 
                         // texte
                         p {
+                            font-size: var(--typescale-responsive-small-text);
                             display: none;
                         }
-
                         p.active {
                             display: block;
                         }
@@ -266,7 +328,7 @@
                         justify-content: center;
 
                         // mentions en bas, à gauche
-                        &>div {
+                        &>div:first-child {
                             flex-direction: column;
                             justify-content: center;
                             align-items: center;
@@ -293,9 +355,6 @@
                             
                             button:hover {
                                 transform: none;
-                            }
-    
-                            button.active {
                             }
                         }
 
