--- a/styles/pages/_presentation_toutes_les_saisons.scss
+++ b/styles/pages/_presentation_toutes_les_saisons.scss
@@ -39,7 +39,7 @@
             border-radius: var(--border-radius);
             transition: .5s;
 
-            // pour le responsive plus tard
+            // Pour le responsive plus tard
             &>span {
                 display: none;
             }
@@ -210,6 +210,16 @@
                     height: 90px;
                     width: 1px;
                     background-color: black;
+
+                    &::before {
+                        content: "";
+                        display: block;
+                        width: 3px;
+                        height: 3px;
+                        background-color: black;
+
+                        transform: translate(-30%);
+                    }
                 }
 
                 // Deux parties principales de description dans le cadre (poster + boutons)
@@ -293,6 +303,16 @@
                             height: 100px;
                             width: 1px;
                             background-color: black;
+
+                            &::before {
+                                content: "";
+                                display: block;
+                                width: 3px;
+                                height: 3px;
+                                background-color: black;
+        
+                                transform: translate(-30%);
+                            }
                         }
 
                         // zone des boutons
