--- a/styles/pages/_style_backstage.scss
+++ b/styles/pages/_style_backstage.scss
@@ -30,18 +30,17 @@
 
     /**MAIN*/
     main{
-        padding: 0 8rem;
+        padding: var(--padding-desktop-horizontal);
 
         /**paramètres des 2 articles côte à côte*/
         & > div{
             display: flex;
             direction: row;
-            justify-content: space-between;
             width: 83vw;
-            margin: 0 1.5rem;
+            margin: 0 0 0 1.5rem;
             & > article{
                 padding: 1.5rem;
-                margin: 3rem 3rem 3rem 0;
+                margin: 3rem 0;
             }
         }
 
@@ -54,6 +53,7 @@
         article{
             margin: 3rem 1.5rem;
             padding: 1rem;
+            padding-bottom: 2.5rem;
             border-radius: 0.6rem;
             width: 100%;
             
@@ -76,6 +76,7 @@
             width: 30vh;
             height: 10vw;
             margin: 0.5rem;
+            margin-left: 1.5rem;
         }
     }
 
@@ -105,7 +106,7 @@
 
         img{
             float: left;
-            height: 56vh;
+            height: 42vh;
         }
     }
 
@@ -134,6 +135,12 @@
         }
     }
 
+    /**alignement de l'article avec les autres*/
+    .decale_vers_droite{
+        margin-left: 4rem;
+        margin-right: 3.5rem;
+    }
+
     /**positionnement de l'image d'un article spécifique à gauche*/
     .img_gauche{
         img{
@@ -142,10 +149,29 @@
     }
 }
 
-/**RESPONSIVE*/
-@media screen and (max-width: 428px) {
+// ###############################
+// # FORMAT RESPONSIVE TELEPHONE #
+// ###############################
+
+@media screen and (max-width: 728px) {
     img{
-        display: none;
+        width: 1rem;
+        height: 1rem;
     }
-    
+    main{
+        padding: 0;
+        article{
+            margin: 0;
+            width: 1vh;
+        }
+
+        & > div{
+            width: 83vw;
+            margin: 0 0 0 1.5rem;
+            & > article{
+                padding: 1.5rem;
+                margin: 3rem 0;
+            }
+        }
+    }
 }
