la page des critiques

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -37,3 +37,4 @@ a {
 @import "pages/general-presentation-page";
 @import "pages/presentation_toutes_les_saisons";
 @import "pages/style_backstage";
+@import "pages/critique-pages";
